# gemini

./: 2013ctha.averages  2013ctha.db  2013ctha.json  2013ctha.match  2013ctha.pit  2013ctha.stddev  2013rr.json  2013rr.match  2013rr.pit  2013rr.schedule  2013rr.stddev  CMakeLists.txt  Gemini.bat  README.md  app.js  config.json  connecticut_data-sqlite.sql  connecticut_data.sql  database.db  gemini.cpp  gemini.js  initConnecticut.js  package.json  run.sh
data/: 2013rr.averages  2013rr.json  2013rr.match  2013rr.schedule  2013rr.stddevs  2014nyro.auto  2014nyro.cycle  2014nyro.json  2014nyro.pit  2014nyro.schedule  2014nytr.json  README.txt
helpers/: eventHelper.js  process-plugin.js  teamOverviewHelper.js
plugins/: README.md  plugin1.js  teleopaccuracy.js
public/javascripts/: averages-table.js  edit.js  link-sort-datatables.js  match-lookup-table.js  rankings-table.js  schedule-table.js  team-lookup-table.js  team.js
public/stylesheets/: style.css
public/videos/: README.md
routes/: administration.js  auto-entry.js  configuration.js  cycle-entry.js  edit.js  eventHelper.js  image.js  index.js  match-entry.js  match.js  newEvent.js  pit.js  pull.js  rankings.js  schedule.js  table.js  team.js  video.js
views/: administration.jade  auto-entry-edit.jade  auto-entry.jade  configuration.jade  cycle-entry-edit.jade  cycle-entry.jade  edit.jade  error.jade  image.jade  index.jade  layout.jade  match-entry-edit.jade  match-entry.jade  match-lookup.jade  match.jade  newEvent.jade  page-full.jade  page.jade  pictures.jade  pit-edit.jade  pit.jade  pull.jade  rankings.jade  schedule-add.jade  schedule-edit.jade  schedule.jade  table.jade  team-lookup.jade  team.jade  uploadData.jade  video.jade
